sema/testdata/gcc-c99-extra/reject/struct-parse-1.c
struct s { int a; int b; struct t c; };
struct s d = { .b = 0 };
